--- a/final/online-grocery/src/styles/ToastModal.css
+++ b/final/online-grocery/src/styles/ToastModal.css
@@ -42,3 +42,17 @@
   .toast-content button:hover {
     background-color: sienna;
   }
+
+  .btn-regular {
+    padding: 0.5rem 1rem;
+    background-color: sienna;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 0.95rem;
+  }
+  
+  .btn-regular:hover {
+    background-color: #a74c2c;
+  }
