--- a/final/online-grocery/src/styles/form.css
+++ b/final/online-grocery/src/styles/form.css
@@ -89,3 +89,17 @@ label {
   background-color: sienna;
   color: white;
 }
+
+.btn-regular {
+  padding: 0.5rem 1rem;
+  background-color: sienna;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.95rem;
+}
+
+.btn-regular:hover {
+  background-color: #a74c2c;
+}
